--- a/www/index.html
+++ b/www/index.html
@@ -1697,6 +1697,7 @@
           '</ons-list-item>'
           );
         }
+        OneSignal.clearOneSignalNotifications();
       }
     </script>
     <style>
