--- a/www/index.html
+++ b/www/index.html
@@ -1742,7 +1742,7 @@
   <ons-page>
         <ons-toolbar id="notificacao_">
             <div class="left">
-                <ons-back-button>Notificações</ons-back-button>
+                <ons-back-button id="back_notificacoes">Notificação</ons-back-button>
             </div>
             <div class="center"></div>
         </ons-toolbar>
@@ -1771,7 +1771,7 @@
               mensagem = item['mensagem'];
               data_notificacao = item['data_notificacao'];
               hash = item['id'];
-              link = item['link'];
+              link = item['link'] ? item['link'] : '';
               lido = 'sim';
 
               texto_notificacao += 
@@ -1793,7 +1793,7 @@
               data_notificacao = item['data_notificacao'];
               hash = item['id'];
               lido = item['lido'];
-              link = item['link'];
+              link = item['link'] ? item['link'] : '';
               if (item['id']) {
                 lista_notificacao.push({id: hash, titulo: titulo, mensagem: mensagem, lido: lido, data_notificacao: data_notificacao, link: link});
                 localStorage.setItem("lista-notificacoes", JSON.stringify(lista_notificacao));
@@ -1810,6 +1810,47 @@
           '</ons-list-item>'
           );
         }
+
+        $( "#back_notificacoes" ).click(function() {
+          notificacoes = JSON.parse(localStorage.getItem('lista-notificacoes'));
+          if (notificacoes) {
+            notificacoes = notificacoes.reverse();
+            var texto_notificacoes = '';
+
+            $.each(notificacoes, function (key, item) {
+              var titulo = item['titulo'];
+              var mensagem = item['mensagem'];
+              var data_notificacao = item['data_notificacao'];
+              var id_not = item['id'];
+              var lido = item['lido'];
+              var link = item['link'];
+              texto_notificacoes += 
+                '<ons-list-item onclick="fn.pushPage({\'id\': \'notificacao.html\', \'title\': \'Notificação||'+id_not+'\'})">'+
+                '    <p class="intro texto_notificacoes">'+
+                '      <b>'+titulo+'</b></br></br>';
+                
+                if (lido == 'nao') {
+                  texto_notificacoes += '<b>'+mensagem+'</b></br></br>';
+                }
+                else{
+                  texto_notificacoes += mensagem+'</br></br>';
+                }
+
+              texto_notificacoes +=
+                '      <i style="float: right!important;">'+data_notificacao+'</i>'+
+                '    </p>'+
+                '  </ons-list-item>';
+            });
+            $("#textoNotificacoes").html(texto_notificacoes);
+          }
+          else{
+            $("#textoNotificacoes").html(
+            '<ons-list-item>'+
+            '    <p class="intro" style="text-align:center!important">Nenhuma notificação encontrada.</p>'+
+            '</ons-list-item>'
+            );
+          }
+        });
       }
     </script>
     <style>
