--- a/www/index.html
+++ b/www/index.html
@@ -1948,6 +1948,20 @@
 
       <ons-list-item tappable modifier="longdivider">
         <label class="left">
+          <ons-radio class="versao" input-id="ntlh" value="ntlh"></ons-radio>
+        </label>
+        <label for="ntlh" class="center">Bíblia Sagrada NTLH</label>
+      </ons-list-item>
+      
+      <ons-list-item tappable modifier="longdivider">
+        <label class="left">
+          <ons-radio class="versao" input-id="pt_kja" value="pt_kja"></ons-radio>
+        </label>
+        <label for="pt_kja" class="center">Bíblia Sagrada KJA (PT)</label>
+      </ons-list-item>
+
+      <ons-list-item tappable modifier="longdivider">
+        <label class="left">
           <ons-radio class="versao" input-id="en_kjv" value="en_kjv"></ons-radio>
         </label>
         <label for="en_kjv" class="center">Bíblia Sagrada KJV (EN)</label>
